# duck_summarizer

./: .env.example  Cargo.toml  Dockerfile  README.md  start.sh
src/: main.rs
