[package]
name = "duck_summarizer"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.13", features = ["macros", "rustls", "ctrlc_handler"], default-features = false }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
fern = { version = "0.7.1", features = ["colored"] }
chrono = "0.4"
async-trait = "0.1"
dotenvy = "0.15"